--- a/website/stylesheet.css
+++ b/website/stylesheet.css
@@ -6,33 +6,35 @@ h1 {
     /*text-decoration: underline;*/
     text-align: center;
 
+
 }
-span {
+/*span {
     font-size: 35px;
     font-weight: bold;
     border-bottom: border-width 50spx;
     text-align: center;
 
-}
-img {
+}*/
+img{
     display: block;
     margin: auto;
-    margin-top: none;
+    margin-top: auto;
+
 
 }
+
 div.a {
     max-width: 900px;
     margin: 0 auto;
-    /*text-align: center;*/
     
+
 }
 
 p.categories {
     font-style: italic;
     text-decoration: underline;
     font-weight: bold;
-    /*display: inline-block;
-    text-align:left;*/
+
 }
 ul {
     list-style-type: circle;
